Added mavenrc informations.